// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfileScreen renders correctly when loading 1`] = `
<BackgroundContainer
  header={<ButtonClose />}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 0.85)",
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": "100%",
        "padding": 20,
      }
    }
  >
    <Loading
      blueMode={true}
    />
  </View>
</BackgroundContainer>
`;

exports[`UserProfileScreen renders correctly when user is set 1`] = `
<BackgroundContainer
  header={<ButtonClose />}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 0.85)",
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": "100%",
        "padding": 20,
      }
    }
  >
    <UserDetails
      user={
        Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
        }
      }
    />
  </View>
</BackgroundContainer>
`;
